package Simulation.Flying;

import Simulation.motion.Direction;

public interface Flying
{
    public void move();
}
