package Simulation.Menu;

public class Menu
{
}
