package Simulation.motion;

public enum Direction
{
    LEFT,
    LEFT_UP,
    LEFT_DOWN,
    RIGHT,
    RIGHT_DOWN,
    RIGHT_UP,
    DOWN,
    UP,
    ERROR
}
