@startuml Simlation Class Diagram
class Simulation
{
    public static void main(String[] args)
}

class Database
{
    - ArrayList<RedPlane> redTeam
    - ArrayList<BluePlane> blueTeam
    - ArrayList<Cloud> clouds
    - int mapWidth
    - int mapHeight
}

class Plane
{
    - boolean isReloaded
    - boolean isVisible
    - ArrayList<Bullet> firedBullets

    Plane(Coordinate position, Direction front)
    + Plane(Coordinate position, Direction front)
    + Direction getFront()
    + boolean getVisibilityStatus()
    + void changeVisibilityStatus(boolean isVisible)
    + void destroy()
    + void loadAmmunition()
    + Direction scan()
}

interface Flying
{
    + void move()
}

abstract FlyingObject
{
    # Coordinate position;
    # Direction front;

    + Coordinate getPosition()
    + Direction getFront()
}

class Cloud
{
    - static final Dirction windFront
    
    + Cloud(Coordinate position)
    + void hide(Plane plane)
}

class Bullet
{
    + Bullet()
    + Plane getOwner()
}

class DirectionManager
{
    + static Direction randDirection()
}

class SimulationManager
{
    - Database database
    - static ArrayList<Coordinate> findFieldsToClear(ArrayList<FlyingObject> flyingObjects)
    - ArrayList<Plane> findReadyToFire(ArrayList<Plane> planes)
    - static void destoryCollapsedFlyingObjects(ArrayList<FlyingObject> flyingObjects)
    - static void hidePlanes(ArrayList<Plane> planes, ArrayList<Cloud> clouds)
    - static void moveFlyingObjects(ArrayList<FlyingObject> flyingObjects)
    - ArrayList<Bullet> fire(ArrayList<Plane> planes)
    + SimulationManager(int teamsAbundance, int mapWidht, int mapHeight)
    + boolean round()
}

class StatisticsManager
{
    - ArrayList<Statistics> statistics

    + void updateStatistics()
}

class Menu
{
    + Menu()
}

class Coordinate
{
    - int x
    - int y

    + Coordinate(int x, int y)
    + Coordinate(Coordinate coordinate)
    + int getX()
    + int getY()
}

enum Direction
{
    LEFT
    LEFT_UP
    LEFT_DOWN
    RIGHT
    RIGHT_DOWN
    RIGHT_UP
    DOWN
    UP
    ERROR
}

class Statistics
{
    - int kills
    - int alive

    + Statistics(int alive)
    + void addKill()
    + void addAlive()
    + void subAlive()
}

Flying <|.. FlyingObject
FlyingObject <|-- Bullet
FlyingObject <|-- Cloud
FlyingObject <|-- Plane

StatisticsManager *-- Statistics
FlyingObject *-- Coordinate
FlyingObject *-- Direction
Menu <-- SimulationManager
Simulation <-- Menu
Cloud <-- DirectionManager
Database *-- Plane
Database *-- Cloud
SimulationManager <-- Coordinate
SimulationManager <-- Database
DirectionManager <-- Direction
SimulationManager <-- StatisticsManager
SimulationManager <-- FlyingObject
Plane *-- Bullet


@enduml